--- a/course-service.yml
+++ b/course-service.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/course_db
     username: root
-    password: password
+    password: root
   jpa:
     hibernate:
       ddl-auto: update
